src/app/components/general/sidenav/navbar/navbar.component.scss
main{
  background-color: var(--color-white);
    padding: 2rem 1rem 2rem 1rem;
    height: calc(100dvh - 80px - 4rem);
    position: relative;
    display: flex;
    flex-direction: column;
  }
  button{
    position: absolute;
    right: 1rem;
    bottom: 2rem;
    z-index: 5;
  }
  article{
    height: 100%;
    overflow-y: auto;
  }

app-menu-profil-mobile{
  overflow-y: hidden;
}

/*>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>
responsive
>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>*/
.view__desktop-main{
  width: calc(300px - 36px);
  border-radius: 30px;
  margin: 1rem 0 1rem 1rem;
  height: calc(100dvh - 80px - 4rem - 2rem);
}

